# Taller-TP-Final-Grupo13

./: .gitignore  CMakeLists.txt  INSTALL.md  Makefile  README.md  install.sh
client/: CMakeLists.txt  GameLoop.cpp  GameLoop.h  PlayerState.h  WorldState.cpp  WorldState.h  main.cpp
client/audio/: AudioManager.cpp  AudioManager.h  GameAudioService.cpp  GameAudioService.h
client/config/: AudioConfig.cpp  AudioConfig.h  ClientConfig.cpp  ClientConfig.h  ConfigLoader.cpp  ConfigLoader.h  ItemVisualConfig.cpp  ItemVisualConfig.h  NpcVisualConfig.cpp  NpcVisualConfig.h  RacesClassesConfig.cpp  RacesClassesConfig.h  SpellVfxConfig.cpp  SpellVfxConfig.h  UiConstants.h
client/controllers/: InputController.cpp  InputController.h  PlayerActionController.cpp  PlayerActionController.h
client/game/: ChatWidget.cpp  ChatWidget.h  GameLoop.cpp  GameLoop.h  InputController.cpp  InputController.h  InventoryPanel.cpp  InventoryPanel.h  LoginScreen.cpp  LoginScreen.h  PlayerActionController.cpp  PlayerActionController.h  PlayerState.h  PositionLabel.cpp  PositionLabel.h  SnapshotProcessor.cpp  SnapshotProcessor.h  StatsPanel.cpp  StatsPanel.h  WorldRenderer.cpp  WorldRenderer.h  WorldState.cpp  WorldState.h
client/net/: ClientProtocol.cpp  ClientProtocol.h  Command.h  NetSession.cpp  NetSession.h  ReceiverThread.cpp  ReceiverThread.h  SenderThread.cpp  SenderThread.h  Senderthread.h
client/processors/: SnapshotProcessor.cpp  SnapshotProcessor.h
client/render/: AnimationSystem.cpp  AnimationSystem.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  EntityRenderer.cpp  EntityRenderer.h  ItemVisualConfig.cpp  ItemVisualConfig.h  NpcVisualConfig.cpp  ObjectSupConfig.cpp  ObjectSupConfig.h  SpriteConfig.cpp  SpriteConfig.h  SpriteLayout.h  VFXRenderer.cpp  VFXRenderer.h  WorldRenderer.cpp  WorldRenderer.h  render_types.h
client/ui/: ChatWidget.cpp  ChatWidget.h  HudManager.cpp  HudManager.h  InventoryPanel.cpp  InventoryPanel.h  InventoryRenderer.cpp  InventoryRenderer.h  ItemLabels.cpp  ItemLabels.h  LoginScreen.cpp  LoginScreen.h  PositionLabel.cpp  PositionLabel.h  SpellSystem.cpp  SpellSystem.h  StatsPanel.cpp  StatsPanel.h  StatsPanelRenderer.cpp  StatsPanelRenderer.h
common/: CMakeLists.txt  MapaDTO.h  constants.h  liberror.h  queue.h  resolvererror.h  socket.cpp  socket.h
common/protocol/: Deserializer.h  MapaDTO.h  Protocol.cpp  Protocol.h  Serializer.h  WeaponRules.h  dtos.h  protocol.h
config/: audio_config.toml  client_config.toml  death_effects.toml  game_config.toml  item_visuals.toml  items.toml  npc_visuals.toml  npcs.toml  objects.toml  objects_sup.toml  projectiles.toml  races_classes.toml  spells.toml  spells_vfx.toml  sprites.toml  tiles.toml
editor/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
server/game/: Clan.h  Commands.cpp  Commands.h  Equations.cpp  Equations.h  FloorItem.h  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  Items.cpp  Items.h  MapaBuilder.cpp  MapaBuilder.h  Npc.cpp  Npc.h  PersistenceMonitor.cpp  PersistenceMonitor.h  PersistenceThread.cpp  PersistenceThread.h  PlayerData.h  QueueMonitor.cpp  QueueMonitor.h  ServerGameLoop.cpp  ServerGameLoop.h  Stats.h  World.cpp  World.h
server/game/commands/: BankCommands.cpp  BankCommands.h  ChatCheatCommands.cpp  ChatCheatCommands.h  ChatCommand_Bank.cpp  ChatCommand_Clan.cpp  ChatCommands.cpp  CheatCommands.cpp  ClanCommands.cpp  ClanCommands.h  CombatCommands.cpp  Commands.h  DungeonCommands.cpp  DungeonCommands.h  InventoryCommands.cpp  MagicCommands.cpp  MerchantCommands.cpp  MerchantCommands.h  MovementCommands.cpp  NpcCommands.cpp  SessionCommands.cpp
server/game/config/: GameConfig.cpp  GameConfig.h  GameConstants.h  MapConstants.h
server/game/entities/: Clan.h  FloorItem.h  PlayerData.h  entity_types.h
server/game/world/: IdAllocator.h  MapaBuilder.cpp  MapaBuilder.h  Mazmorra.cpp  Mazmorra.h  World.cpp  World.h  WorldBank.cpp  WorldBank.h  WorldBuilder.cpp  WorldBuilder.h  WorldChat.cpp  WorldChat.h  WorldClans.cpp  WorldClans.h  WorldCollision.cpp  WorldCollision.h  WorldItems.cpp  WorldItems.h  WorldNpcs.cpp  WorldNpcs.h  WorldPlayers.cpp  WorldPlayers.h  WorldSnapshot.cpp  WorldSnapshot.h  WorldSpawner.cpp  WorldSpawner.h  ZoneTypes.h
server/net/: Acceptor.cpp  Acceptor.h  ClientHandler.cpp  ClientHandler.h  ServerProtocol.cpp  ServerProtocol.h  ServerReceiverThread.cpp  ServerReceiverThread.h  ServerSenderThread.cpp  ServerSenderThread.h
tests/: CMakeLists.txt  client_protocol_test.cpp  server_protocol_test.cpp
