cmake_minimum_required(VERSION 3.24)

if (POLICY CMP0135)
    cmake_policy(SET CMP0135 NEW)
endif()

if (NOT DEFINED CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 20)
endif()

set(CMAKE_CXX_EXTENSIONS ON)

project(argentum_grupo13_tp
    VERSION 1.0
    HOMEPAGE_URL "https://github.com/URL-HERE"
    LANGUAGES CXX
    )

option(ARGENTUM_TESTS "Enable / disable tests." ON)
option(ARGENTUM_CLIENT "Enable / disable client program." ON)
option(ARGENTUM_SERVER "Enable / disable server program." ON)
option(ARGENTUM_EDITOR "Enable / disable editor program." ON)
option(ARGENTUM_MAKE_WARNINGS_AS_ERRORS "Enable / disable warnings as errors." ON)

message(CMAKE_CXX_COMPILER_ID="${CMAKE_CXX_COMPILER_ID}")

# Define target: lib common between client, server and editor programs
# HEY TODO XXX: change the name to something that you like
add_library(argentum_grupo13_common STATIC)

# add the source files that make the lib
# HEY!! TODO XXX: add more subfolders here
add_subdirectory(common/)
target_link_libraries(argentum_grupo13_common PUBLIC tomlplusplus::tomlplusplus)

# set compiler warnings to the targets
include(cmake/CompilerWarnings.cmake)
set_project_warnings(argentum_grupo13_common ${ARGENTUM_MAKE_WARNINGS_AS_ERRORS} FALSE)

# Say where the headers will be found required by library target
# Make this PUBLIC so any dependant linking lib will inherit this
# location (so our dependants will not have to explicitly request this)
target_include_directories(argentum_grupo13_common PUBLIC .)

# HEY!! TODO XXX: you need to install some runtime and dev libraries *before*
# compiling the client/editor code.
#
# In xubuntu 24.04 these are:
#
# sudo apt-get install libopus-dev libopusfile-dev libxmp-dev libfluidsynth-dev fluidsynth libwavpack1 libwavpack-dev libfreetype-dev wavpack
#

# Install libSDL2 and libSDL2pp (for client or editor)
# HEY!! TODO XXX: add more dependendies (either for client, server or editor)
if(ARGENTUM_CLIENT OR ARGENTUM_EDITOR)
    include(FetchContent)
    FetchContent_Declare(
        SDL2
        GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
        GIT_TAG release-2.30.8
        GIT_SHALLOW TRUE
        GIT_PROGRESS TRUE
        OVERRIDE_FIND_PACKAGE
    )

    FetchContent_Declare(
        SDL2_image
        GIT_REPOSITORY https://github.com/libsdl-org/SDL_image.git
        GIT_TAG release-2.8.2
        GIT_SHALLOW TRUE
        GIT_PROGRESS TRUE
        OVERRIDE_FIND_PACKAGE
    )

    FetchContent_Declare(
        SDL2_mixer
        GIT_REPOSITORY https://github.com/libsdl-org/SDL_mixer.git
        GIT_TAG release-2.8.0
        GIT_SHALLOW TRUE
        GIT_PROGRESS TRUE
        OVERRIDE_FIND_PACKAGE
    )

    FetchContent_Declare(
        SDL2_ttf
        GIT_REPOSITORY https://github.com/libsdl-org/SDL_ttf.git
        GIT_TAG release-2.22.0
        GIT_SHALLOW TRUE
        GIT_PROGRESS TRUE
        OVERRIDE_FIND_PACKAGE
    )

    FetchContent_Declare(
        libSDL2pp
        OVERRIDE_FIND_PACKAGE
        URL https://github.com/libSDL2pp/libSDL2pp/archive/cc198c9a5657048bee67ece82de620b2d5661084.zip
    )

    FetchContent_MakeAvailable(SDL2 SDL2_image SDL2_mixer SDL2_ttf libSDL2pp)
endif()
# toml++ siempre disponible (lo usan client, server y editor para leer config)
include(FetchContent)
FetchContent_Declare(
    tomlplusplus
    GIT_REPOSITORY https://github.com/marzer/tomlplusplus.git
    GIT_TAG v3.4.0
    GIT_SHALLOW TRUE
)
FetchContent_MakeAvailable(tomlplusplus)

# Program section
# ---------------
if(ARGENTUM_CLIENT)
    # HEY!! TODO XXX: Change the name of the executable to the one you like!
    add_executable(argentum_grupo13_client)

    # Make them depend on argentum_grupo13_common lib
    add_dependencies(argentum_grupo13_client argentum_grupo13_common SDL2pp::SDL2pp)

    # Add source files and enable warnings
    # HEY!! TODO XXX: add more subfolders here
    add_subdirectory(client)

    set_project_warnings(argentum_grupo13_client ${ARGENTUM_MAKE_WARNINGS_AS_ERRORS} FALSE)

    # add libSDL2pp's headers
    target_include_directories(argentum_grupo13_client PRIVATE ${libSDL2pp_SOURCE_DIR})

    # Link the argentum_grupo13_common lib target
    target_link_libraries(argentum_grupo13_client argentum_grupo13_common SDL2pp::SDL2pp)
endif()

if(ARGENTUM_SERVER)
    # HEY!! TODO XXX: Change the name of the executable to the one you like!
    add_executable(argentum_grupo13_server)

    # Make them depend on argentum_grupo13_common lib
    add_dependencies(argentum_grupo13_server argentum_grupo13_common)

    # Add source files and enable warnings
    # HEY!! TODO XXX: add more subfolders here
    add_subdirectory(server)

    set_project_warnings(argentum_grupo13_server ${ARGENTUM_MAKE_WARNINGS_AS_ERRORS} FALSE)

    # Link the argentum_grupo13_common lib target
    target_link_libraries(argentum_grupo13_server argentum_grupo13_common)
endif()

if(ARGENTUM_EDITOR)
    # HEY!! TODO XXX: Change the name of the executable to the one you like!
    add_executable(argentum_grupo13_editor)

    # Make them depend on argentum_grupo13_common lib
    add_dependencies(argentum_grupo13_editor argentum_grupo13_common SDL2pp::SDL2pp)

    # Add source files and enable warnings
    # HEY!! TODO XXX: add more subfolders here
    add_subdirectory(editor)

    set_project_warnings(argentum_grupo13_editor ${ARGENTUM_MAKE_WARNINGS_AS_ERRORS} FALSE)

    # add libSDL2pp's headers
    target_include_directories(argentum_grupo13_editor PRIVATE ${libSDL2pp_SOURCE_DIR})

    # Link the argentum_grupo13_common lib target
    target_link_libraries(argentum_grupo13_editor argentum_grupo13_common SDL2pp::SDL2pp)
endif()


# Testing section
# ---------------

if(ARGENTUM_TESTS)
    # Let's use google test
    include(FetchContent)
    FetchContent_Declare(
        googletest
        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
    )

    # For Windows: Prevent overriding the parent project's compiler/linker settings
    # (borrowed from https://google.github.io/googletest/quickstart-cmake.html)
    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
    FetchContent_MakeAvailable(googletest)
    include(GoogleTest)

    # target for testing
    # HEY!! TODO XXX: Change the name of the executable to the one you like!
    add_executable(argentum_grupo13_tests)

    # HEY!! TODO XXX: I'm assuming that the code under testing is in argentum_grupo13_common
    # Change this if you have to.
    add_dependencies(argentum_grupo13_tests argentum_grupo13_common)

    # Say where to find the xoz headers
    # HEY!! TODO XXX: add more subfolders here
    target_include_directories(argentum_grupo13_tests PUBLIC .)

    # Add the source files to the argentum_grupo13_tests target
    # HEY!! TODO XXX: add more subfolders here
    add_subdirectory(tests/)

    # Set the compiler warnings to the tests target (but be a little lesser strict)
    set_project_warnings(argentum_grupo13_tests ${ARGENTUM_MAKE_WARNINGS_AS_ERRORS} TRUE)

    # Say where googletest headers can be found
    target_include_directories(argentum_grupo13_tests
        PUBLIC
        ${gtest_SOURCE_DIR}/include
        ${gmock_SOURCE_DIR}/include
        )

    # HEY!! TODO XXX: I'm assuming that the code under testing is in argentum_grupo13_common
    # Change this if you have to.
    target_link_libraries(argentum_grupo13_tests
        argentum_grupo13_common
        GTest::gtest_main
    )
endif()
